Thu Oct 22 00:12:33 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* lib/securerandom.rb (SecureRandom::gen_random): use /dev/urandom
	  for initialize OpenSSL's rand.

Wed Oct 21 12:10:04 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ext/openssl/ossl_rand.c (ossl_rand_bytes): RAND_bytes could
	  be return -1 as an error. Therefore, added error handling.
	* ext/openssl/ossl_pkey_dsa.c (dsa_generate): ditto.

Wed Oct 21 09:04:09 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* include/ruby/util.h: remove a warning suppression C4723
	  (potential divide by zero) for VisualC++. It's meaningless.
	  Before r26197, there is ruby_div0() in this place and it
	  actually made divide by zero. But now it's just garbage.

Wed Oct 21 08:23:36 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* random.c: random_raw_seed don't use GRND_NONBLOCK. GRND_NONBLOCK
	  mean the result might not have an enough cryptic strength and
	  easy predictable. That's no good for SecureRandom.

Sun Oct 18 17:26:53 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* missing/explicit_bzero.c: new file. define explicit_bzero.
	* common.mk: add a rule for explicit.o.
	* configure.in: detect explicit_bzero and memset_s.
	* include/ruby/missing.h: add explicit_bzero.
	* random.c (init_randomseed): use explicit_bzero() instead of
	  memset(). memset could be eliminated by compiler optimization.

Mon Nov 30 18:46:44 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/readline/extconf.rb: call dir_config("libedit")
	  if --enable-libedit is specified. [Bug #11751]
	  patched by John Hein

Mon Nov 30 08:44:29 2015  Eric Wong  <e@80x24.org>

	* variable.c: remove spurious #define for globals
	  [ruby-core:71735] [Feature #11749]

Sun Nov 29 09:13:03 2015  Conor Landry  <clandry94@gmail.com>

	* NEWS: [DOC] Various grammar corrections and clarifications to
	  increase readability.  [Fix GH-1115]

Sat Nov 28 19:33:55 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
